# vote

./: .gitignore  Cargo.toml  Dockerfile  breakfast.json  dinner.json  docker-compose.yml  lunch.json  quad.json  readme  register_modules.sh  run_all.sh  sample.json
src/: approval.rs  borda.rs  fptp.rs  fractional.rs  lib.rs  liquid_democracy.rs  main.rs  rcv.rs  rpc.rs
