[package]
name = "vote"
version = "0.1.0"
authors = ["Yasushi Sakai <yasushisakai+git@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-cors = "0.5.4"
actix-files = "0.3"
actix-web = "3"
actix-web-actors = "3"
env_logger = "0.8.3"
ndarray = "0.15.1"
serde = "1.0.125"
serde_json = "1.0.64"
